force-app/main/default/objects/SMS_Storage__c/SMS_Storage__c.object-meta.xml
<CustomObject>
    <label>SMS Storage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SMS Storage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Storage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>