force-app/main/default/objects/SMS_Storage__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Sent Messages</relationshipLabel>
    <relationshipName>CampaignId</relationshipName>
    <type>Lookup</type>
</CustomField>