force-app/main/default/objects/SMS_Storage__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseId</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SMS Storage</relationshipLabel>
    <relationshipName>SMS_Storage</relationshipName>
    <type>Lookup</type>
</CustomField>