force-app/main/default/objects/SMS_Storage__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SMS Storage</relationshipLabel>
    <relationshipName>SMS_Storage</relationshipName>
    <type>Lookup</type>
</CustomField>