force-app/main/default/objects/SMS_Storage__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time of the Message</label>
    <type>DateTime</type>
</CustomField>