force-app/main/default/objects/SMS_Storage__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>SMS Storage</relationshipLabel>
    <relationshipName>SMS_Storage</relationshipName>
    <type>Lookup</type>
</CustomField>