force-app/main/default/objects/SMS_Storage__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>