force-app/main/default/objects/SMS_Storage__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>