force-app/main/default/objects/SMS_Storage__c/fields/Text_Values__c.field-meta.xml
<CustomField>
    <fullName>Text_Values__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>