force-app/main/default/objects/SMS_Storage__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Message Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>